src/argocd/bootstrap-resources/prometheus/prometheus-esphome-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-esphome-exporter
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus-esphome-exporter
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-esphome-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-esphome-exporter
    spec:
      containers:
        - name: prometheus-esphome-exporter
          image: docker.io/kpetrem/mqtt-exporter
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-esphome-exporter
  namespace: prometheus
  labels:
    mylabel/app: prometheus-esphome-exporter
spec:
  selector:
    app.kubernetes.io/name: prometheus-esphome-exporter
  ports:
  - name: http
    protocol: TCP
    port: 9000
    targetPort: http
