src/argocd/bootstrap-resources/prometheus/prometheus-frigate-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-frigate-exporter
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus-frigate-exporter
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-frigate-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-frigate-exporter
    spec:
      containers:
        - name: prometheus-frigate-exporter
          image: docker.io/rhysbailey/prometheus-frigate-exporter
          ports:
            - containerPort: 9101
              name: prometheus
              protocol: TCP
        - name: prometheus-frigate-exporter-nvr02
          image: docker.io/rhysbailey/prometheus-frigate-exporter
          ports:
            - containerPort: 9102
              name: prometheus
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-frigate-exporter
  namespace: prometheus
  labels:
    mylabel/app: prometheus-frigate-exporter
spec:
  selector:
    app.kubernetes.io/name: prometheus-frigate-exporter
  ports:
  - name: prometheus-nvr01
    protocol: TCP
    port: 9101
    targetPort: prometheus
  - name: prometheus-nvr02
    protocol: TCP
    port: 9102
    targetPort: prometheus
