src/argocd/bootstrap-resources/prometheus/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.ryanb.tv`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          kind: Service
          port: http-web
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.ryanb.tv`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          kind: Service
          port: http-web
  tls: {}
